Bug 93351 - FORMATTING: "Edit style" button in "Schema & Numbering" tab in paragraph style edition navigates wrong
Summary: FORMATTING: "Edit style" button in "Schema & Numbering" tab in paragraph styl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Julien Nabet
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-11 10:57 UTC by Jose M. Albarrán
Modified: 2016-10-25 19:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jose M. Albarrán 2015-08-11 10:57:08 UTC
Related the bug: Bug 88045

The button has been added, but it navigates to the wrong place. It has to navigate to the "List style" edition, and it navigates (open) the Paragraph style. 

This is really confusing me several hours, because the both styles (in Spanish) have the same name ("Numeración !"), and it took long for me to notice.
Comment 1 Alex Thurgood 2015-08-11 15:22:23 UTC
Confirming

Version: 5.0.0.5
Build ID: 1b1a90865e348b492231e1c451437d7a15bb262b
Locale : fr-FR (fr.UTF-8)

OSX 10.10.4
Comment 2 Julien Nabet 2015-08-22 13:43:06 UTC
On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

I'll give it a try.
Comment 3 Julien Nabet 2015-08-22 13:58:35 UTC
I submitted a patch on gerrit, see https://gerrit.libreoffice.org/#/c/17924/

However, rethinking about this, it's quite confusing because the initial action is "Edit Paragraph Style".
Comment 4 Commit Notification 2015-08-25 13:39:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad8e2baf68ed5edccabdf56584768fcdaabbab5c

tdf#93351: Edit style button in Schema & Numbering should point to List styles

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-09-01 13:54:12 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fba2fee26909ac14f6d1531655556dc33bc29df4&h=libreoffice-5-0

tdf#93351: Edit style button in Schema & Numbering should point to List styles

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.