tdf#93351: Edit style button in Schema & Numbering should point to List styles

Related to http://cgit.freedesktop.org/libreoffice/core/commit/?id=e38f63d861715fb56f41af82b897c2128ea20b38

Change-Id: I4ede777207fe42dede6e82c7399189354f182f6a
Reviewed-on: https://gerrit.libreoffice.org/17924
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
Tested-by: Samuel Mehrbrodt <s.mehrbrodt@gmail.com>
(cherry picked from commit ad8e2baf68ed5edccabdf56584768fcdaabbab5c)
Reviewed-on: https://gerrit.libreoffice.org/17991
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>